--- a/dot/ranger/.config/ranger/rc.conf
+++ b/dot/ranger/.config/ranger/rc.conf
@@ -41,7 +41,7 @@ set preview_directories false
 set preview_files true
 set preview_images true
 set preview_images_method ueberzug
-set preview_max_size 262144
+set preview_max_size 10485760
 set preview_script ~/.config/ranger/scope.sh
 set relative_current_zero true
 set save_backtick_bookmark true
