add install script, some scripts and changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
+script.db.py
+script.py
+
 /asd/.local/opt*
 /asd/.bash_history
-
-/dot/bspwm/.config/bspwm/s/volume.int
-/dot/neovim/.config/nvim/spell*
