many changes and new scripts

--- a/dot/mpv/.config/mpv/mpv.conf
+++ b/dot/mpv/.config/mpv/mpv.conf
@@ -10,5 +10,5 @@ screenshot-png-compression=9
 screenshot-template='%tY%tm%td%tH%tM%tS-%F-%P'
 screenshot-directory='~/Pictures/mpv'
 
-#no-stop-screensaver
 x11-name
+no-input-default-bindings
