many changes and new scripts

--- a/dot/mpv/.config/mpv/input.conf
+++ b/dot/mpv/.config/mpv/input.conf
@@ -5,7 +5,7 @@ MBTN_LEFT ignore
 MBTN_LEFT_DBL cycle fullscreen
 
 
-`     script-binding console/enable
+:     script-binding console/enable
 q     quit
 Q     quit 4
 SPACE cycle pause
@@ -15,7 +15,11 @@ o     show-progress
 O     no-osd cycle-values osd-level 3 1
 m     cycle mute
 M     set mute yes
-r     cycle really-quiet
+i     cycle shuffle
+u     cycle-values loop-file "no" "inf"
+U     cycle loop-file
+y     cycle-values loop-playlist "no" "inf"
+Y     cycle loop-playlist
 s     screenshot
 S     screenshot video
 
