--- a/dot/ranger/.config/ranger/rc.conf
+++ b/dot/ranger/.config/ranger/rc.conf
@@ -112,9 +112,8 @@ alias travel     scout -aefklst
 # ===================================================================
 
 # Basic
-map     Q quitall
 map     q quit_write_last_dir
-copymap q ZZ ZQ
+map     Q quit!
 
 map R     reload_cwd
 map F     set freeze_files!
