--- a/dot/ranger/.config/ranger/rifle.conf
+++ b/dot/ranger/.config/ranger/rifle.conf
@@ -92,13 +92,12 @@ ext midi?,        terminal, has wildmidi = wildmidi -- "$@"
 # Video/Audio with a GUI
 #-------------------------------------------
 mime ^video,       has mpv,      X, flag f = mpv -- "$@"
-mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
-mime ^video|audio, has vlc,      X, flag f = vlc -- "$@"
+mime ^video,       has mpv,      X, flag f = mpv --wid=$WINDOWID -- "$@"
 
 #--------------------------------------------
 # Video without X
 #-------------------------------------------
-mime ^video, terminal, !X, has mpv       = mpv -- "$@"
+mime ^video, terminal, !X, has mpv       = mpv --vid=no -- "$@"
 
 #-------------------------------------------
 # Documents
