--- a/dot/mpv/.config/mpv/mpv.conf
+++ b/dot/mpv/.config/mpv/mpv.conf
@@ -1,15 +1,17 @@
 sub-auto=exact
 sub-file-paths='.:sub:subs:subtitle'
-sub-file-paths-append='/mnt/b/user/Videos/aaa/S/a'
-sub-file-paths-append='/mnt/b/user/Videos/aaa/S/n'
-sub-file-paths-append='/mnt/b/user/Videos/aaa/S/o'
-sub-file-paths-append='/mnt/b/user/Videos/aaa/S/r'
+sub-file-paths-append='/mnt/b/user/av/aaa/S/a'
+sub-file-paths-append='/mnt/b/user/av/aaa/S/n'
+sub-file-paths-append='/mnt/b/user/av/aaa/S/o'
+sub-file-paths-append='/mnt/b/user/av/aaa/S/r'
 
 screenshot-format=png
 screenshot-png-compression=9
 screenshot-template='%tY%tm%td%tH%tM%tS-%F-%P'
-screenshot-directory='~/Pictures/mpv'
+screenshot-directory='~/img/mpv'
 
 x11-name
 no-input-default-bindings
 no-audio-display
+
+osd-fractions
