--- a/dot/ranger/.config/ranger/rc.conf
+++ b/dot/ranger/.config/ranger/rc.conf
@@ -112,8 +112,8 @@ alias travel     scout -aefklst
 # ===================================================================
 
 # Basic
-map     q quit_write_last_dir
-map     Q quit!
+map     q quit
+map     Q quit_f
 
 map R     reload_cwd
 map F     set freeze_files!
