--- a/dot/mpv/.config/mpv/input.conf
+++ b/dot/mpv/.config/mpv/input.conf
@@ -24,6 +24,7 @@ s     screenshot
 S     screenshot video
 
 
+L seek 85 exact
 h seek -30
 j seek -5
 k seek  5
@@ -54,3 +55,6 @@ X add sub-delay +1.0
 c cycle sub
 C cycle sub down
 v cycle sub-visibility
+
+# github/jonniek/mpv-playlistmanager
+ENTER script-binding playlistmanager/showplaylist
