--- a/dot/ranger/.config/ranger/rc.conf
+++ b/dot/ranger/.config/ranger/rc.conf
@@ -63,17 +63,17 @@ set tilde_in_titlebar true
 set unicode_ellipsis true
 set bidi_support false
 set update_title false
-set update_tmux_title true
+set update_tmux_title false
 set use_preview_script true
 set vcs_aware true
 set vcs_backend_bzr disabled
-set vcs_backend_git enabled
+set vcs_backend_git local
 set vcs_backend_hg disabled
 set vcs_backend_svn disabled
 set vcs_msg_length 50
 set viewmode miller
-set w3m_delay 0.5
-set w3m_offset 0
+#set w3m_delay 0.5
+#set w3m_offset 0
 set wrap_plaintext_previews true
 set wrap_scroll false
 #set xterm_alt_key
