--- a/dot/ranger/.config/ranger/rifle.conf
+++ b/dot/ranger/.config/ranger/rifle.conf
@@ -48,27 +48,42 @@
 # Note: When using rifle in ranger, there is an additional flag "c" for
 # only running the current file even if you have marked multiple files.
 
-mime ^audio = mpv --no-audio-display -- "$@"
 
-mime ^video, X, terminal = mpv --wid=$WINDOWID -- "$@"
-mime ^video, X, flag f = mpv -- "$@"
+mime ^audio|inode/directory = mpv --vid=no --loop-playlist=inf --no-audio-display -- "$@"
+mime ^audio|inode/directory = mpv --vid=no --loop-playlist=inf --no-audio-display --shuffle -- "$@"
+
+
+mime ^video, X, terminal = mpv --wid="$WINDOWID" -- "$@"
+mime ^video, X, flag f   = mpv -- "$@"
 
 mime ^video, !X = mpv --vid=no -- "$@"
 
-mime ^image, X, terminal = mvi --wid=$WINDOWID -- "$@"
-mime ^image, X, flag f = mvi -- "$@"
 
-ext ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz|zst, has atool = atool -l -e -- "$@" | "$PAGER"
-ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has atool = atool -l -e -- "$@" | "$PAGER"
+mime ^image, X, terminal = mvi --wid="$WINDOWID" -- "$@"
+mime ^image, X, flag f   = mvi -- "$@"
 
-ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz,  has atool = atool -x -e -- "$@"
-ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has atool = atool -x -e -- "$@"
 
-mime ^text = "$EDITOR" -- "$@"
-mime ^text = "$PAGER" -- "$@"
+ext ace|ar|arc|bz2?|cab|cpio|cpt|deb = atool -l -e -- "$@" | "$PAGER"
+ext iso|jar|msi|pkg|rar|shar|tar|tgz = atool -l -e -- "$@" | "$PAGER"
+ext 7z|dgc|dmg|gz|zstxar|xpi|xz|zip  = atool -l -e -- "$@" | "$PAGER"
+
+ext ace|ar|arc|bz2?|cab|cpio|cpt|deb = atool -v -x -e -- "$@"
+ext iso|jar|msi|pkg|rar|shar|tar|tgz = atool -v -x -e -- "$@"
+ext 7z|dgc|dmg|gz|zstxar|xpi|xz|zip  = atool -v -x -e -- "$@"
+
+
+mime text/*|application/json|application/x-shellscript = "$EDITOR" -- "$@"
+mime text/*|application/json|application/x-shellscript = "$PAGER" -- "$@"
 
 else = ask
+else = tar -v -c -f "$1.$(date -u +%Y%m%d%H%M%S).tar" "$(basename "$1")"
 
-label e, label editor, else = "$EDITOR" -- "$@"
+label a, else = tar -v -c -f "$1.tar" "$(basename "$1")"
+label e, else = "$EDITOR" -- "$@"
 label p, else = "$PAGER" -- "$@"
-label a, else = tar -c -f "$1.tar" "$(basename "$1")"
+
+label editor, else = "$EDITOR" -- "$@"
+label pager,  else = "$PAGER" -- "$@"
+
+else = chmod +x -- "$@"
+else = chmod -x -- "$@"
