adjust to new environment

--- a/dot/mpv/.config/mpv/mpv.conf
+++ b/dot/mpv/.config/mpv/mpv.conf
@@ -1,9 +1,9 @@
 sub-auto=exact
 sub-file-paths='.:sub:subs:subtitle'
-sub-file-paths-append='/mnt/b/user/av/aaa/S/a'
-sub-file-paths-append='/mnt/b/user/av/aaa/S/n'
-sub-file-paths-append='/mnt/b/user/av/aaa/S/o'
-sub-file-paths-append='/mnt/b/user/av/aaa/S/r'
+sub-file-paths-append='~/av/aaa/S/a'
+sub-file-paths-append='~/av/aaa/S/n'
+sub-file-paths-append='~/av/aaa/S/o'
+sub-file-paths-append='~/av/aaa/S/r'
 
 screenshot-format=png
 screenshot-png-compression=9
