ranger: turn off preview, fix atool flags

--- a/dot/ranger/.config/ranger/rifle.conf
+++ b/dot/ranger/.config/ranger/rifle.conf
@@ -18,9 +18,9 @@ ext ace|ar|arc|bz2?|cab|cpio|cpt|deb = atool -l -e -- "$@" | "$PAGER"
 ext iso|jar|msi|pkg|rar|shar|tar|tgz = atool -l -e -- "$@" | "$PAGER"
 ext 7z|dgc|dmg|gz|zstxar|xpi|xz|zip  = atool -l -e -- "$@" | "$PAGER"
 
-ext ace|ar|arc|bz2?|cab|cpio|cpt|deb = atool -v -x -e -- "$@"
-ext iso|jar|msi|pkg|rar|shar|tar|tgz = atool -v -x -e -- "$@"
-ext 7z|dgc|dmg|gz|zstxar|xpi|xz|zip  = atool -v -x -e -- "$@"
+ext ace|ar|arc|bz2?|cab|cpio|cpt|deb = atool -x -e -- "$@"
+ext iso|jar|msi|pkg|rar|shar|tar|tgz = atool -x -e -- "$@"
+ext 7z|dgc|dmg|gz|zstxar|xpi|xz|zip  = atool -x -e -- "$@"
 
 
 mime text/*|application/json|application/x-shellscript = "$EDITOR" -- "$@"
