--- a/dot/ranger/.config/ranger/rc.conf
+++ b/dot/ranger/.config/ranger/rc.conf
@@ -38,8 +38,8 @@ set one_indexed false
 set open_all_images true
 set padding_right true
 set preview_directories false
-set preview_files true
-set preview_images true
+set preview_files false
+set preview_images false
 set preview_images_method ueberzug
 set preview_max_size 20971520
 set preview_script ~/.config/ranger/scope.sh
