--- a/dot/mpv/.config/mpv/input.conf
+++ b/dot/mpv/.config/mpv/input.conf
@@ -15,7 +15,7 @@ o     show-progress
 O     no-osd cycle-values osd-level 3 1
 m     cycle mute
 M     set mute yes
-i     cycle shuffle
+i     script-binding random/toggle
 u     cycle-values loop-file "no" "inf"
 U     cycle loop-file
 y     cycle-values loop-playlist "no" "inf"
@@ -24,15 +24,25 @@ s     screenshot
 S     screenshot video
 
 
-L seek 85 exact
-h seek -30
-j seek -5
-k seek  5
-l seek  30
+J seek -1 exact
+K seek  1 exact
+L seek 86 exact
+
+h seek -30 exact
+j seek -5 exact
+k seek  5 exact
+l seek  30 exact
+
 7 add volume -1
 8 add volume  1
 9 add volume -5
 0 add volume  5
+
+& script-binding sysvolume/dec_low
+* script-binding sysvolume/inc_low
+( script-binding sysvolume/dec
+) script-binding sysvolume/inc
+
 . frame-step
 , frame-back-step
 1 playlist-prev
@@ -48,13 +58,18 @@ l seek  30
 } add speed 1
 
 
-z add sub-delay -0.1
+z add sub-delay -0.05
 Z add sub-delay -1.0
-x add sub-delay +0.1
+x add sub-delay +0.05
 X add sub-delay +1.0
 c cycle sub
 C cycle sub down
 v cycle sub-visibility
 
+w add audio-delay -0.05
+W add audio-delay -1.0
+e add audio-delay +0.05
+E add audio-delay +1.0
+
 # github/jonniek/mpv-playlistmanager
-ENTER script-binding playlistmanager/showplaylist
+ENTER script-binding playlistmanager/show
