--- a/dot/mpv/.config/mpv/mpv.conf
+++ b/dot/mpv/.config/mpv/mpv.conf
@@ -1,3 +1,4 @@
+sid=1
 sub-auto=exact
 sub-file-paths='.:sub:subs:subtitle'
 sub-file-paths-append='~/av/aaa/S/a'
@@ -7,7 +8,7 @@ sub-file-paths-append='~/av/aaa/S/r'
 
 screenshot-format=png
 screenshot-png-compression=9
-screenshot-template='%tY%tm%td%tH%tM%tS-%F-%P'
+screenshot-template='%tY%tm%td%tH%tM%tS %F %P'
 screenshot-directory='~/img/mpv'
 
 x11-name
