--- a/dot/ranger/.config/ranger/rc.conf
+++ b/dot/ranger/.config/ranger/rc.conf
@@ -1,6 +1,6 @@
 # vim: ft=vim
 
-set automatically_count_files true
+set automatically_count_files false
 set autosave_bookmarks true
 set autoupdate_cumulative_size false
 set cd_bookmarks true
@@ -9,7 +9,7 @@ set cd_tab_fuzzy false
 set clear_filters_on_dir_change false
 set collapse_preview true
 set colorscheme default
-set column_ratios 1,5,9
+set column_ratios 1,1
 set confirm_on_delete always
 set dirname_in_tabs false
 set display_free_space_in_status_bar true
@@ -28,7 +28,7 @@ set size_in_bytes false
 set idle_delay 3000
 #set iterm2_font_height
 #set iterm2_font_width
-set line_numbers relative
+set line_numbers false
 set max_console_history_size 50
 set max_history_size 20
 set metadata_deep_search false
@@ -43,7 +43,7 @@ set preview_images false
 set preview_images_method ueberzug
 set preview_max_size 20971520
 set preview_script ~/.config/ranger/scope.sh
-set relative_current_zero true
+set relative_current_zero false
 set save_backtick_bookmark true
 set save_console_history true
 set save_tabs_on_exit false
@@ -62,8 +62,8 @@ set status_bar_on_top false
 set tilde_in_titlebar true
 set unicode_ellipsis true
 set bidi_support false
-set update_title false
-set update_tmux_title false
+set update_title true
+set update_tmux_title true
 set use_preview_script true
 set vcs_aware true
 set vcs_backend_bzr disabled
@@ -162,18 +162,6 @@ map v       mark_files all=True toggle=True
 map uv      mark_files all=True val=False
 map V       toggle_visual_mode
 map uV      toggle_visual_mode reverse=True
-
-# For the nostalgics: Midnight Commander bindings
-map <F1> help
-map <F2> rename_append
-map <F3> display_file
-map <F4> edit
-map <F5> copy
-map <F6> cut
-map <F7> console mkdir%space
-map <F8> console delete
-#map <F8> console trash
-map <F10> exit
 
 # In case you work on a keyboard with dvorak layout
 map <UP>       move up=1
@@ -307,15 +295,18 @@ map gT        tab_move -1
 map gn        tab_new
 map gc        tab_close
 map uq        tab_restore
-map <a-1>     tab_open 1
-map <a-2>     tab_open 2
-map <a-3>     tab_open 3
-map <a-4>     tab_open 4
-map <a-5>     tab_open 5
-map <a-6>     tab_open 6
-map <a-7>     tab_open 7
-map <a-8>     tab_open 8
-map <a-9>     tab_open 9
+map <F1>      tab_open 1
+map <F2>      tab_open 2
+map <F3>      tab_open 3
+map <F4>      tab_open 4
+map <F5>      tab_open 5
+map <F6>      tab_open 6
+map <F7>      tab_open 7
+map <F8>      tab_open 8
+map <F9>      tab_open 9
+map <F10>     tab_open 10
+map <F11>     tab_open 11
+map <F12>     tab_open 12
 map <a-r>     tab_shift 1
 map <a-l>     tab_shift -1
 
