--- a/dot/ranger/.config/ranger/rifle.conf
+++ b/dot/ranger/.config/ranger/rifle.conf
@@ -1,17 +1,15 @@
 # vim: ft=cfg
 
 mime ^audio|inode/directory = mpv --vid=no --loop-playlist=inf --no-audio-display -- "$@"
-mime ^audio|inode/directory = mpv --vid=no --loop-playlist=inf --no-audio-display --shuffle -- "$@"
+mime ^audio|inode/directory = mpv --vid=no --loop-playlist=inf --no-audio-display --script-opts=random-off=no -- "$@"
 
 
-mime ^video, X, terminal = mpv --wid="$WINDOWID" -- "$@"
-mime ^video, X, flag f   = mpv -- "$@"
-
-mime ^video, !X = mpv --vid=no -- "$@"
+mime ^video|inode/directory, X, terminal = mpv --wid="$WINDOWID" -- "$@"
+mime ^video|inode/directory              = mpv -- "$@"
 
 
-mime ^image, X, terminal = mvi --wid="$WINDOWID" -- "$@"
-mime ^image, X, flag f   = mvi -- "$@"
+mime ^image|inode/directory, X, terminal = mvi --wid="$WINDOWID" -- "$@"
+mime ^image|inode/directory              = mvi -- "$@"
 
 
 ext ace|ar|arc|bz2?|cab|cpio|cpt|deb = atool -l -e -- "$@" | "$PAGER"
@@ -34,11 +32,12 @@ else = tar -v -c -f "$1.tar" "$(basename "$1")"
 else = tar -v -c -f "$1.$(date -u +%Y%m%d%H%M%S).tar.gz" "$(basename "$1")"
 else = tar -v -c -f "$1.tar.gz" "$(basename "$1")"
 
+label s, else = "$1"
 label e, else = "$EDITOR" -- "$@"
 label p, else = "$PAGER" -- "$@"
 
 label editor, else = "$EDITOR" -- "$@"
-label pager,  else = "$PAGER" -- "$@"
+label pager, else = "$PAGER" -- "$@"
 
 else = chmod +x -- "$@"
 else = chmod -x -- "$@"
