--- a/dot/mpv/.config/mpv/mpv.conf
+++ b/dot/mpv/.config/mpv/mpv.conf
@@ -1,6 +1,6 @@
 sid=1
 sub-auto=exact
-sub-file-paths='.:sub:subs:subtitle'
+sub-file-paths='.:sub:subs:subtitle:subtitles'
 sub-file-paths-append='~/av/aaa/S/a'
 sub-file-paths-append='~/av/aaa/S/n'
 sub-file-paths-append='~/av/aaa/S/o'
@@ -11,8 +11,19 @@ screenshot-png-compression=9
 screenshot-template='%tY%tm%td%tH%tM%tS %F %P'
 screenshot-directory='~/img/mpv'
 
-x11-name
+cache-secs=30
+
 no-input-default-bindings
 no-audio-display
 
+osd-font=monospace
+osd-font-size=12
+osd-bold=no
+osd-italic=no
+osd-color=1/1
+osd-back-color=0/0.8
+osd-border-size=0
+osd-margin-x=0
+osd-margin-y=0
+osd-scale-by-window=no
 osd-fractions
