--- a/dot/ranger/.config/ranger/rifle.conf
+++ b/dot/ranger/.config/ranger/rifle.conf
@@ -41,3 +41,5 @@ label pager, else = "$PAGER" -- "$@"
 
 else = chmod +x -- "$@"
 else = chmod -x -- "$@"
+
+else = qbittorrent --add-paused=true "$@"
