--- a/dot/tmux/.config/tmux/tmux.conf
+++ b/dot/tmux/.config/tmux/tmux.conf
@@ -1,8 +1,11 @@
+set-option -g alternate-screen off
 set-option -g default-command "exec zsh"
 set-option -g status-position "top"
 set-option -g status-interval 1
 set-option -g status-right "%Y/%m/%d %H:%M:%S"
 set-option -g status-style "fg=black,bg=white"
+
+set-hook -g pane-died "respawn-pane"
 
 bind-key -n M-` last-window
 bind-key -n M-1 previous-window
