--- a/dot/fontconfig/.config/fontconfig/fonts.conf
+++ b/dot/fontconfig/.config/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Fantasque Sans Mono</family>
+            <family>Terminus</family>
         </prefer>
     </alias>
     <alias>
