--- a/dot/ranger/.config/ranger/rc.conf
+++ b/dot/ranger/.config/ranger/rc.conf
@@ -1,4 +1,4 @@
-# vim: ft=vim
+# vim: ft=cfg
 
 set automatically_count_files false
 set autosave_bookmarks true
@@ -48,7 +48,7 @@ set save_backtick_bookmark true
 set save_console_history true
 set save_tabs_on_exit false
 set scroll_offset 9
-set shorten_title 3
+set shorten_title 0
 set show_cursor false
 set show_hidden_bookmarks true
 set show_hidden true
@@ -81,10 +81,9 @@ set wrap_scroll false
 # ===================================================================
 # == Local Options
 # ===================================================================
-# You can set local options that only affect a single directory.
 
-# Examples:
-# setlocal path=~/downloads sort mtime
+setlocal path=/mnt/a/img/t preview_directories true
+setlocal path=/mnt/a/img/t sort basename
 
 # ===================================================================
 # == Command Aliases in the Console
@@ -112,15 +111,16 @@ alias travel     scout -aefklst
 # ===================================================================
 
 # Basic
-map     q quit
-map     Q quit_f
+map q quit
+map Q quit_f
+map <SPACE>ren rename_edit
 
 map R     reload_cwd
 map F     set freeze_files!
 map <C-r> reset
 map <C-l> redraw_window
 map <C-c> abort
-map <esc> change_mode normal
+map <ESC> change_mode normal
 map ~ set viewmode!
 
 map i display_file
@@ -155,13 +155,16 @@ map Mt linemode metatitle
 
 # Tagging / Marking
 map t       tag_toggle
-map ut      tag_remove
 map "<any>  tag_toggle tag=%any
-map <Space> mark_files toggle=True
-map v       mark_files all=True toggle=True
-map uv      mark_files all=True val=False
-map V       toggle_visual_mode
-map uV      toggle_visual_mode reverse=True
+#map <Space> mark_files toggle=True
+#map v       mark_files all=True toggle=True
+#map uv      mark_files all=True val=False
+#map V       toggle_visual_mode
+#map uV      toggle_visual_mode reverse=True
+
+map V  mark_files toggle=True
+map v  toggle_visual_mode
+map uv toggle_visual_mode reverse=True
 
 # In case you work on a keyboard with dvorak layout
 map <UP>       move up=1
@@ -188,8 +191,8 @@ copymap <PAGEUP>   <C-B>
 
 map <C-J>  move down=9
 map <C-K>  move up=9
-copymap J <C-D>
-copymap K <C-U>
+map <C-d> move down=1   pages=True
+map <C-u>   move up=1     pages=True
 
 # Jumping around
 map H     history_go -1
@@ -288,8 +291,8 @@ map <C-n>     tab_new
 map <C-w>     tab_close
 map <TAB>     tab_move 1
 map <S-TAB>   tab_move -1
-map <A-Right> tab_move 1
-map <A-Left>  tab_move -1
+map <A-RIGHT> tab_move 1
+map <A-LEFT>  tab_move -1
 map gt        tab_move 1
 map gT        tab_move -1
 map gn        tab_new
@@ -337,9 +340,6 @@ map dc get_cumulative_size
 map zc    set collapse_preview!
 map zd    set sort_directories_first!
 map zh    set show_hidden!
-map <C-h> set show_hidden!
-copymap <C-h> <backspace>
-copymap <backspace> <backspace2>
 map zI    set flushinput!
 map zi    set preview_images!
 map zm    set mouse_enabled!
@@ -397,8 +397,8 @@ eval for arg in "rwxXst": cmd("map -{0}  shell -f chmod u-{0} %s".format(arg))
 # Note: Unmapped keys are passed directly to the console.
 
 # Basic
-cmap <tab>   eval fm.ui.console.tab()
-cmap <s-tab> eval fm.ui.console.tab(-1)
+cmap <TAB>   eval fm.ui.console.tab()
+cmap <S-TAB> eval fm.ui.console.tab(-1)
 cmap <ESC>   eval fm.ui.console.close()
 cmap <CR>    eval fm.ui.console.execute()
 cmap <C-l>   redraw_window
@@ -407,21 +407,21 @@ copycmap <ESC> <C-c>
 copycmap <CR>  <C-j>
 
 # Move around
-cmap <up>    eval fm.ui.console.history_move(-1)
-cmap <down>  eval fm.ui.console.history_move(1)
-cmap <left>  eval fm.ui.console.move(left=1)
-cmap <right> eval fm.ui.console.move(right=1)
-cmap <home>  eval fm.ui.console.move(right=0, absolute=True)
-cmap <end>   eval fm.ui.console.move(right=-1, absolute=True)
-cmap <a-b> eval fm.ui.console.move_word(left=1)
-cmap <a-f> eval fm.ui.console.move_word(right=1)
+cmap <UP>    eval fm.ui.console.history_move(-1)
+cmap <DOWN>  eval fm.ui.console.history_move(1)
+cmap <LEFT>  eval fm.ui.console.move(left=1)
+cmap <RIGHT> eval fm.ui.console.move(right=1)
+cmap <HOME>  eval fm.ui.console.move(right=0, absolute=True)
+cmap <END>   eval fm.ui.console.move(right=-1, absolute=True)
+cmap <A-b> eval fm.ui.console.move_word(left=1)
+cmap <A-f> eval fm.ui.console.move_word(right=1)
 
-copycmap <a-b> <a-left>
-copycmap <a-f> <a-right>
+copycmap <A-b> <A-LEFT>
+copycmap <A-f> <A-RIGHT>
 
 # Line Editing
-cmap <backspace>  eval fm.ui.console.delete(-1)
-cmap <delete>     eval fm.ui.console.delete(0)
+cmap <BACKSPACE>  eval fm.ui.console.delete(-1)
+cmap <DELETE>     eval fm.ui.console.delete(0)
 cmap <C-w>        eval fm.ui.console.delete_word()
 cmap <A-d>        eval fm.ui.console.delete_word(backward=False)
 cmap <C-k>        eval fm.ui.console.delete_rest(1)
@@ -430,18 +430,18 @@ cmap <C-y>        eval fm.ui.console.paste()
 
 # And of course the emacs way
 copycmap <ESC>       <C-g>
-copycmap <up>        <C-p>
-copycmap <down>      <C-n>
-copycmap <left>      <C-b>
-copycmap <right>     <C-f>
-copycmap <home>      <C-a>
-copycmap <end>       <C-e>
-copycmap <delete>    <C-d>
-copycmap <backspace> <C-h>
+copycmap <UP>        <C-p>
+copycmap <DOWN>      <C-n>
+copycmap <LEFT>      <C-b>
+copycmap <RIGHT>     <C-f>
+copycmap <HOME>      <C-a>
+copycmap <END>       <C-e>
+copycmap <DELETE>    <C-d>
+copycmap <BACKSPACE> <C-h>
 
 # Note: There are multiple ways to express backspaces.  <backspace> (code 263)
 # and <backspace2> (code 127).  To be sure, use both.
-copycmap <backspace> <backspace2>
+copycmap <BACKSPACE> <BACKSPACE2>
 
 # This special expression allows typing in numerals:
 cmap <allow_quantifiers> false
@@ -451,14 +451,14 @@ cmap <allow_quantifiers> false
 # ===================================================================
 
 # Movement
-pmap  <down>      pager_move  down=1
-pmap  <up>        pager_move  up=1
-pmap  <left>      pager_move  left=4
-pmap  <right>     pager_move  right=4
-pmap  <home>      pager_move  to=0
-pmap  <end>       pager_move  to=-1
-pmap  <pagedown>  pager_move  down=1.0  pages=True
-pmap  <pageup>    pager_move  up=1.0    pages=True
+pmap  <DOWN>      pager_move  down=1
+pmap  <UP>        pager_move  up=1
+pmap  <LEFT>      pager_move  left=4
+pmap  <RIGHT>     pager_move  right=4
+pmap  <HOME>      pager_move  to=0
+pmap  <END>       pager_move  to=-1
+pmap  <PAGEDOWN>  pager_move  down=1.0  pages=True
+pmap  <PAGEUP>    pager_move  up=1.0    pages=True
 pmap  <C-d>       pager_move  down=0.5  pages=True
 pmap  <C-u>       pager_move  up=0.5    pages=True
 
@@ -484,12 +484,12 @@ pmap E      edit_file
 # ===================================================================
 
 # Movement
-tmap <up>        taskview_move up=1
-tmap <down>      taskview_move down=1
-tmap <home>      taskview_move to=0
-tmap <end>       taskview_move to=-1
-tmap <pagedown>  taskview_move down=1.0  pages=True
-tmap <pageup>    taskview_move up=1.0    pages=True
+tmap <UP>        taskview_move up=1
+tmap <DOWN>      taskview_move down=1
+tmap <HOME>      taskview_move to=0
+tmap <END>       taskview_move to=-1
+tmap <PAGEDOWN>  taskview_move down=1.0  pages=True
+tmap <PAGEUP>    taskview_move up=1.0    pages=True
 tmap <C-d>       taskview_move down=0.5  pages=True
 tmap <C-u>       taskview_move up=0.5    pages=True
 
@@ -498,16 +498,16 @@ copytmap <DOWN>     j  <C-n> <CR>
 copytmap <HOME>     g
 copytmap <END>      G
 copytmap <C-u>      u
-copytmap <PAGEDOWN> n  f  <C-F>  <Space>
+copytmap <PAGEDOWN> n  f  <C-F>  <SPACE>
 copytmap <PAGEUP>   p  b  <C-B>
 
 # Changing priority and deleting tasks
 tmap J          eval -q fm.ui.taskview.task_move(-1)
 tmap K          eval -q fm.ui.taskview.task_move(0)
 tmap dd         eval -q fm.ui.taskview.task_remove()
-tmap <pagedown> eval -q fm.ui.taskview.task_move(-1)
-tmap <pageup>   eval -q fm.ui.taskview.task_move(0)
-tmap <delete>   eval -q fm.ui.taskview.task_remove()
+tmap <PAGEDOWN> eval -q fm.ui.taskview.task_move(-1)
+tmap <PAGEUP>   eval -q fm.ui.taskview.task_move(0)
+tmap <DELETE>   eval -q fm.ui.taskview.task_remove()
 
 # Basic
 tmap <C-l> redraw_window
