--- a/.config/mpv/shd.conf
+++ b/.config/mpv/shd.conf
@@ -3,6 +3,7 @@
 audio-display=no
 cache-secs=30
 input-default-bindings=no
+ignore-path-in-watch-later-config=yes
 
 screenshot-directory=~/img/mpv
 screenshot-format=png
