--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
-set -g history-limit 0
+#set -g history-limit 0
 set -g status-position "top"
 set -g status-interval 1
+set -g status-left "#{user}@#H "
+set -g status-left-length 79
 set -g status-right "%Y/%m/%d %H:%M:%S"
 set -g status-style "fg=black,bg=white"
 
